<resources>

    <string name="app_name">My Application</string>
    <string name="greeting">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_text">Login</string>
    <string name="indicate">login name</string>
    <string name="password">Password</string>
    <string name="flag">flag</string>
    <string name="nameButton">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="swi_ques">What does this do?</string>
    <string name="button_login">Login</string>
    <string name="dialog_message">Sure to exit?</string>
    <string name="SwitchOn">Switch is On</string>
    <string name="SwitchOff">Switch is Off</string>
    <string name="dialog_title">Alert</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="chatButton">Chat Button</string>
    <string name="startChat">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="forecastButton">Weather Forecast</string>
    <string name="currentT">CurrentTemp</string>
    <string name="minT">LowestTemp</string>
    <string name="maxT">HighestTemp</string>
    <string name="windSpeed">WindSpeed</string>
    <string name="apple">Apple</string>
    <string name="bread">Bread</string>
    <string name="cherry">Cherry</string>
    <string name="about">About</string>
    <string name="test_toolbar">ToolBar</string>
    <string name="dialog_title_toolbar_yes_stay">Want to go back?</string>
    <string name="dialog_message_goback">If you want to leave, click YES.\n Want to stay, click NO.</string>
    <string name="dialog_title_toolbar_item3">New Message</string>
    <string name="dialog_message_toolbar_item3">  </string>

</resources>
