<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting" />

    <Button
        android:id="@+id/list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/ButtonText" />

    <Button
        android:id="@+id/chatButton"
        android:text="@string/startChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/forecastButton"
        android:text="@string/forecastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/testToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_toolbar"/>

</LinearLayout>