<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/currentT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentT"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/minT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minT"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/maxT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxT"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windSpeed"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

</LinearLayout>