<?xml version="1.0" encoding="utf-8"?>
<GridLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_rowSpan="2"
    android:layout_columnSpan="2"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity">

    
    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="220dp"
        android:layout_height="63dp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/nameButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/check_box"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/swi_ques" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="162dp"
        android:layout_height="62dp"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera"
        />
</GridLayout>
